style.css
:root {
    --darkTextColor: chocolate;
    --lightTextColor: oldlace;

    --bubbleColor: coral;
    --bubbleHighlightColor: rgb(253, 158, 33);
    --bubbleClickColor: rgb(251, 255, 0);

    --markerLineColor: hsl(0, 80%, 50%);

    --mediumBG: wheat;
    --mediumrareBG: rgb(253, 246, 231);
    --lightBG: white;

    --buttonColour: lightblue;
    --buttonTextColour: darkblue;
    --buttonColourHover: rgb(203, 226, 234);
}

* {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    color: var(--darkTextColor);
    font-size: 16px;
}

html, body {
    background-color: var(--mediumBG);
    height: 100%;
    width: 100%;

    overflow: hidden;   /*stop page scrolling */
}

h1 {
    color: var(--darkTextColor);
    text-align: center;
    font-size: 28px;
    /*padding-top: 24px;*/
    padding: auto;
}

h2 {
    color: var(--darkTextColor);
    text-align: center;
    font-size: 24px;
    padding-top: 18px;
}

select{
    padding: 2px;
    z-index: 2;

    /*position: absolute;*/ /* make it float on top*/
    
    width: max-content;
    height: 20px;
    background-color: var(--buttonColour);
    color: var(--buttonTextColour);
    opacity: 0.8;

    /* text */
    font-size: 16px;
    user-select: none; /* prevent selecting of text */

    /* shape */
    border-radius: 5px;
    border: none;
}

.tlDropdownPicker
{
    background-color: var(--buttonColour);
   /* background-color: lightgreen;    */
    
    position: absolute; /* make it float on top*/

    width: max-content;
    height: max-content;
    padding: 5px;
    color: white;
    opacity: 0.8;

    /* shape */
    border-radius: 5px;
    border: none;

    /* put in front */
    z-index: 3;

}

.tlDropdownOption
{
    background-color: var(--buttonColour);

    
    height: 20px;

    /* text */
    font-size: 16px;
    color: var(--buttonTextColour);
    user-select: none; /* prevent selecting of text */
}
.tlDropdownOption:hover
{
    
   /* background-color: rgb(144, 238, 211); */
    background-color: rgb(89, 188, 160); 
}

/*debug*/
/*#mainSection, #headerBar, #mainBar, #mainTable {*/
/*#controls {
    
    border-width: 2px;
    border-style: solid;
    border-color: blue;
}
*/

/* top-level container */
#mainSection {
    background-color: var(--lightBG);
    margin-left: 100px;
    margin-right: 100px;
    margin-top: 24px;

    /*position: fixed;
    width: 80%;*/

   /* display: grid;
    grid-template-columns: 100%;
    grid-template-rows: 10% 7% 83%;
    */
     /*header controls mainBar */
    
    display: grid;
    grid-template-columns: 13.33% 13.33% 13.33% auto 13.33% 13.33% 13.33% ;
    grid-template-rows: 60px 60px 60px auto; /* header, controls, colHeader and timelineTable */
    grid-template-areas: 
    "mainHeader mainHeader mainHeader mainHeader mainHeader mainHeader mainHeader" 
    "controlsL controlsL controlsL . controlsR controlsR controlsR"
    "colHeaderA colHeaderB colHeaderC colHeaderD colHeaderE colHeaderF colHeaderG"
    "timelineA timelineA timelineA centerFrame timelineB timelineB timelineB" ;
    justify-items: center;

    width: auto;
    height: 90%;
}

#headerBar {

    display: flex;
    align-items: center;
    justify-content: center;

    width: 100%;
    height: 100%;
   
   /* border-width: 2px;
    border-style: solid;
    border-color: blue;
*/
    grid-area: mainHeader;

}

#mainBar { /* disabled */
    
    width: 100%;
    height: 100%;

    display: grid;
    grid-template-columns: 13.33% 13.33% 13.33% auto 13.33% 13.33% 13.33% ;
    grid-template-rows: 60px auto; /* colHeader and timelineTable */
    grid-template-areas: 
    "colHeaderA colHeaderB colHeaderC colHeaderD colHeaderE colHeaderF colHeaderG"
    "timelineA timelineA timelineA centerFrame timelineB timelineB timelineB" ;

    /*display: flex;   
    flex-direction: row;
    */ 
}

#controlsBar
{

    margin: auto;
    overflow: hidden;
    width: 100%;
    height: 100%;
   /* display:flex;
    flex-direction: row;
    justify-content: space-evenly;
    */
   
/* display: grid;
    grid-template-columns: 40% 20% 40%;
    border-width: 2px;
    border-style: solid;
    border-color: blue;
*/
    
    grid-area: controls;

}

#controlsL {
    grid-area: controlsL
}

#controlsR {
    grid-area: controlsR;
}


.controls
{
    display: flex;
    align-items: center;
    gap: 20px;
    
    /*border-width: 2px;
    border-style: solid;
    border-color: blue;*/
}

#yearInput, #scaleInput {
    width: 70px;
}


.tableContainer {
    margin: auto;
    position: relative;
    width: 100%;
    height: 100%;
    overflow:hidden;

    /*display: flex;*/

    border-width: 2px;
    border-style: solid;
    border-color: magenta;
}
.tableColumnHeader {
    margin: 0px;
    /*position: absolute;*/
    width: 100%;
    height: 100%;
    top: 0;
   /* height: 90%;*/
    overflow:hidden;
    z-index: 0;

    /* content elemetns layout */
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center; /* rather than left or right */
    align-items: center; /* rather than top or bottom */
    gap: 2px;
    column-gap: 2px;

    /* debug */
   /* border-width: 2px;*/
    border-width: 0px;
    border-style: solid;
    border-color: rgb(0, 225, 255);
}

.tableColumnHeader[isDragTarget=true]
{
    border-width: 2px;
    border-style: solid;
    border-color: rgb(255, 111, 0);
}

.tableColumnHeader:hover {
    overflow: visible;
    height:fit-content;
    min-height: 100%;
    z-index: 3;

    
    border-width: 2px;
    border-style: solid;
    border-color: rgb(0, 255, 38);
    background-color: white;
}

#colHeader1{
   /* left: 0%;*/
   
    grid-area: colHeaderA;

}

#colHeader2{
    /*left: 33.33% ;*/
    grid-area: colHeaderB;
}
#colHeader3{
    /*left: 66.67%;*/
    grid-area: colHeaderC;
}
#colHeader4{
   /* left: 0%;*/
   
    grid-area: colHeaderD;

}

#colHeader5{
    /*left: 33.33% ;*/
    grid-area: colHeaderE;
}
/* ... */

